--- a/bootstrap-work.html
+++ b/bootstrap-work.html
@@ -23,20 +23,20 @@
     <h2>Git and GitHub</h2>
     <ul>
       <li>Initializing local Git repository, and create remote GitHub repositories.</li>
-      <li>Tracking and committing changes with Git.</li>
+      <li class="bg-warning">Tracking and committing changes with Git.</li>
       <li>Pushing a local Git repository to a remote GitHub repository.</li>
       <li>Branching a project to make multiple copies.</li>
-      <li>Merging multiple Git branches back together.</li>
+      <li class="bg-info text-white">Merging multiple Git branches back together.</li>
       <li>Cloning down a project from GitHub to my local machine.</li>
-      <li>Publishing a website on GitHub pages.</li>
+      <li class="bg-success">Publishing a website on GitHub pages.</li>
     </ul>
     <h2>HTML</h2>
     <ul>
-      <li>Using HTML tags to create websites.</li>
+      <li class="bg-warning">Using HTML tags to create websites.</li>
       <li>Indenting and organizing HTML correctly.</li>
       <li>Incorporating block elements.</li>
       <li>Including inline elements.</li>
-      <li>Using both spans and divs.</li>
+      <li class="bg-info text-white">Using both spans and divs.</li>
       <li>Adding classes and ID's to style HTML with CSS.</li>
     </ul>
     <h2>CSS</h2>
@@ -46,15 +46,15 @@
       <li>Writing CSS rules to style particular elements in my HTML.</li>
       <li>Floating elements to create columns, sidebars, and other alignments.</li>
       <li>Padding, margins, and the box model.</li>
-      <li>How CSS cascades to apply styles.</li>
+      <li class="bg-info text-white">How CSS cascades to apply styles.</li>
       <li>The importance of responsive design.</li>
       <li>How to use media queries to dynamically change the appearance of a site based on the user's viewport.</li>
     </ul>
     <h2>Bootstrap</h2>
     <ul>
       <li>Downloading and installing Bootstrap.</li>
-      <li>Adding Bootstrap styles to a website.</li>
-      <li>Navigating Bootstrap documentation.</li>
+      <li class="bg-success">Adding Bootstrap styles to a website.</li>
+      <li class="bg-warning">Navigating Bootstrap documentation.</li>
       <li>Creating websites with Bootstrap.</li>
     </ul>
     <h2>Partnering</h2>
