--- a/bootstrap-work.html
+++ b/bootstrap-work.html
@@ -7,82 +7,103 @@
 </head>
 <body>
   <div class="container">
-    <div class>
+    <div class="jumbotron">
       <h1>My First Week at Epicodus</h1>
       <p>
         I've almost finished my first week at Epicodus. Here are some of the things I've learned so far:
       </p>
     </div>
-    <h2>Command Line</h2>
-    <div class="card">
-      <div class="card-body">
-        <h2 class="card-title">Command Line</h2>
-        <ul class="card-text">
-          <li>Navigating my documents through the command line.</li>
-          <li>Creating new files and folders through the command line.</li>
-          <li>Moving and deleting files and folders through the command line.</li>
-          <li>Retrieving my current location from the command line.</li>
-        </ul>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="card">
+          <div class="card-body">
+            <h2 class="card-title">Command Line</h2>
+            <ul class="card-text">
+              <li>Navigating my documents through the command line.</li>
+              <li>Creating new files and folders through the command line.</li>
+              <li>Moving and deleting files and folders through the command line.</li>
+              <li>Retrieving my current location from the command line.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card">
+          <div class="card-body">
+            <h2 class="card-title">Git and Github</h2>
+            <ul class="card-text">
+              <li>Initializing local Git repository, and create remote GitHub repositories.</li>
+              <li class="bg-warning">Tracking and committing changes with Git.</li>
+              <li>Pushing a local Git repository to a remote GitHub repository.</li>
+              <li>Branching a project to make multiple copies.</li>
+              <li class="bg-info text-white">Merging multiple Git branches back together.</li>
+              <li>Cloning down a project from GitHub to my local machine.</li>
+              <li class="bg-success">Publishing a website on GitHub pages.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card">
+          <div class="card-body">
+            <h2 class="card-title">HTML</h2>
+            <ul class="card-text">
+              <li class="bg-warning">Using HTML tags to create websites.</li>
+              <li>Indenting and organizing HTML correctly.</li>
+              <li>Incorporating block elements.</li>
+              <li>Including inline elements.</li>
+              <li class="bg-info text-white">Using both spans and divs.</li>
+              <li>Adding classes and ID's to style HTML with CSS.</li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="card">
-      <div class="card-body">
-        <h2 class="card-title">Git and GitHub</h2>
-        <ul class="card-text">
-          <li>Initializing local Git repository, and create remote GitHub repositories.</li>
-          <li class="bg-warning">Tracking and committing changes with Git.</li>
-          <li>Pushing a local Git repository to a remote GitHub repository.</li>
-          <li>Branching a project to make multiple copies.</li>
-          <li class="bg-info text-white">Merging multiple Git branches back together.</li>
-          <li>Cloning down a project from GitHub to my local machine.</li>
-          <li class="bg-success">Publishing a website on GitHub pages.</li>
-        </ul>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="card">
+          <div class="card-body">
+            <h2 class="card-title">CSS</h2>
+            <ul class="card-text">
+              <li>Creating a stylesheet.</li>
+              <li>Using CSS selectors to specify an HTML element.</li>
+              <li>Writing CSS rules to style particular elements in my HTML.</li>
+              <li>Floating elements to create columns, sidebars, and other alignments.</li>
+              <li>Padding, margins, and the box model.</li>
+              <li class="bg-info text-white">How CSS cascades to apply styles.</li>
+              <li>The importance of responsive design.</li>
+              <li>How to use media queries to dynamically change the appearance of a site based on the user's viewport.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card">
+          <div class="card-body">
+            <h2 class="card-title">Bootstrap</h2>
+            <ul class="card-text">
+              <li>Downloading and installing Bootstrap.</li>
+              <li class="bg-success">Adding Bootstrap styles to a website.</li>
+              <li class="bg-warning">Navigating Bootstrap documentation.</li>
+              <li>Creating websites with Bootstrap.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card">
+          <div class="card-body">
+            <h2 class="card-title">Partnering</h2>
+            <div class="card-text">
+              <blockquote class="blockquote">
+                <p>"It's been really good working with you!"</p>
+                <footer class="blockquote-footer">My partner the first day</footer>
+              </blockquote>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="card">
-      <div class="card-body">
-        <h2 class="card-title">HTML</h2>
-        <ul class="card-text">
-          <li class="bg-warning">Using HTML tags to create websites.</li>
-          <li>Indenting and organizing HTML correctly.</li>
-          <li>Incorporating block elements.</li>
-          <li>Including inline elements.</li>
-          <li class="bg-info text-white">Using both spans and divs.</li>
-          <li>Adding classes and ID's to style HTML with CSS.</li>
-        </ul>
-      </div>
-    </div>
-    <div class="card">
-      <div class="card-body">
-        <h2 class="card-title">CSS</h2>
-        <ul class="card-text">
-          <li>Creating a stylesheet.</li>
-          <li>Using CSS selectors to specify an HTML element.</li>
-          <li>Writing CSS rules to style particular elements in my HTML.</li>
-          <li>Floating elements to create columns, sidebars, and other alignments.</li>
-          <li>Padding, margins, and the box model.</li>
-          <li class="bg-info text-white">How CSS cascades to apply styles.</li>
-          <li>The importance of responsive design.</li>
-          <li>How to use media queries to dynamically change the appearance of a site based on the user's viewport.</li>
-        </ul>
-      </div>
-    </div>
-    <div class="card">
-      <div class="card-body">
-        <h2 class="card-title">Bootstrap</h2>
-        <ul class="card-text">
-          <li>Downloading and installing Bootstrap.</li>
-          <li class="bg-success">Adding Bootstrap styles to a website.</li>
-          <li class="bg-warning">Navigating Bootstrap documentation.</li>
-          <li>Creating websites with Bootstrap.</li>
-        </ul>
-      </div>
-    </div>
-    <h2>Partnering</h2>
-    <blockquote class="blockquote">
-      <p>"It's been really good working with you!"</p>
-      <footer class="blockquote-footer">My partner the first day</footer>
-    </blockquote>
   </div>
 </body>
 </html>
